--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Restaurant page</h1>
+    <header>
+        <nav>
+            <button>Home</button>
+            <button>Main</button>
+            <button>About</button>
+        </nav>
+    </header>
+    <div id="content"></div>
 </body>
 </html>
