Add content inside template to div#content

--- a/src/template.html
+++ b/src/template.html
@@ -13,6 +13,11 @@
             <button>About</button>
         </nav>
     </header>
-    <div id="content"></div>
+    <div id="content">
+        <h1>Kebab paradise!</h1>
+        <h3>Experience Best Kebab In Town For Astonishing Prices!</h3>
+        <img src="./kebab.jpg" alt="Big Spicy Kebab">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, dolor. Vitae accusantium dolorum molestias exercitationem dicta! Ut ipsum minus in a? Nam velit esse, vero facilis aperiam delectus voluptates consequatur!</p>
+    </div>
 </body>
 </html>
