Add ids to buttons

--- a/src/template.html
+++ b/src/template.html
@@ -8,9 +8,9 @@
 <body>
     <header>
         <nav>
-            <button>Home</button>
-            <button>Main</button>
-            <button>About</button>
+            <button id="home">Home</button>
+            <button id="main">Main</button>
+            <button id="about">About</button>
         </nav>
     </header>
     <div id="content">
