Rename every main to menu

--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <button id="home">Home</button>
-            <button id="main">Main</button>
+            <button id="menu">Menu</button>
             <button id="about">About</button>
         </nav>
     </header>
